[package]
name = "rtee"
description = "Rust Trust Evaluation Engine library"
version = "0.1.0"
edition = "2021"
authors = ["Jérôme Chételat <jerome.chetelat@hesge.ch>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.77"
pest = "2.7.5"
pest_derive = "2.7.5"
assert_float_eq = "1.1.3"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]
